<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.revision_app_two.ui.psychology.PsychologyFragment"
        android:label="@string/title_psychology"
        tools:layout="@layout/fragment_psychology" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.revision_app_two.ui.computing.ComputingFragment"
        android:label="@string/title_computing"
        tools:layout="@layout/fragment_computing" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.revision_app_two.ui.maths.MathsFragment"
        android:label="@string/title_maths"
        tools:layout="@layout/fragment_maths" />
</navigation>
